adaptive intro section

--- a/app/page.html
+++ b/app/page.html
@@ -370,55 +370,8 @@
         <!-- / MOBILE HEADER -->
     </header>
     <!-- / HEADER -->
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid eveniet in cupiditate, consectetur tempora tempore ea quo! Omnis id aspernatur quia voluptatum iure velit voluptate nihil alias, nemo officiis in! Suscipit, quam. Eum natus aspernatur
-        mollitia laudantium, accusantium ab quod explicabo magnam accusamus incidunt animi aut ad voluptatem ipsam. Repudiandae quas deleniti eius suscipit cupiditate odio, error doloremque nostrum unde? Veniam nobis nostrum, ducimus blanditiis eius eligendi
-        aperiam perspiciatis animi quibusdam quos distinctio placeat. Perferendis ipsam, error molestiae fuga et, laboriosam consequatur illum, similique asperiores velit veniam cum tempora reiciendis? Ex unde, architecto eligendi, molestias, deleniti
-        nemo sunt officia excepturi magni nobis ab assumenda repellat odio rerum facilis? Minus consequatur excepturi modi quisquam repudiandae, explicabo quia numquam maxime quo itaque! Aliquam dolorem impedit aliquid consectetur quasi excepturi repudiandae
-        eum aperiam labore id quam in ea assumenda voluptatem, quaerat praesentium error ab architecto optio velit odio consequuntur! Sunt odio impedit deserunt. Nemo animi necessitatibus, repudiandae id ratione alias delectus amet nostrum, minus eum
-        reprehenderit ut magnam voluptatibus quaerat atque voluptates dolor. Rerum odit neque saepe enim quia debitis ipsam aperiam? Aliquid. Dolor voluptatem iusto eaque iste! Cupiditate tempora voluptates quo fuga magnam error numquam. Non voluptatibus
-        enim magni fugiat omnis? Asperiores cum laudantium odit perferendis rem nobis laborum? Nemo, quia rem! Atque neque nam minus perferendis dignissimos totam voluptates dolor inventore exercitationem. Animi magnam aspernatur, omnis dicta non velit
-        illo, libero corrupti et, obcaecati quasi asperiores cumque voluptatum quaerat tenetur reiciendis. Distinctio fugit accusantium debitis quo minima alias ratione corrupti excepturi, maiores, reprehenderit non accusamus quisquam! Optio earum, voluptatem
-        corrupti eveniet molestias vero! Iusto, voluptates sequi accusantium architecto fugit rem sunt. Nihil perspiciatis delectus cupiditate provident ad corrupti voluptatem libero est dicta temporibus, quidem, eius tempore porro eveniet laborum in
-        nesciunt nulla quia repudiandae consequuntur officia commodi? Consequatur aut perferendis aspernatur. Atque nulla doloremque harum excepturi dolorum praesentium sequi esse alias mollitia, eligendi quae possimus voluptatum officiis iure, quibusdam,
-        illo beatae architecto deserunt laboriosam sit nemo aspernatur repellat libero. Consectetur, non! Facere, corrupti vero facilis vitae tempora sunt illum nesciunt est blanditiis possimus voluptatum nisi accusamus unde quisquam porro harum ipsa
-        in doloribus ducimus odio deserunt debitis delectus voluptate! Aut, commodi! Similique quaerat delectus fugiat harum impedit ullam quia, suscipit eveniet nesciunt sunt officia ut architecto facere illo cupiditate nulla maxime illum quo reiciendis
-        veritatis animi reprehenderit minima alias? Quod, in? Nisi, alias pariatur maxime id numquam rerum officia, dolorem nostrum ducimus inventore perferendis a provident aliquam obcaecati vel ipsum doloribus molestiae. Quia magnam autem debitis expedita
-        tenetur rerum velit aut! Fugit omnis maiores incidunt, sed inventore beatae nesciunt perspiciatis? Rem quisquam deleniti distinctio, fugit facere nisi dignissimos, fuga aperiam aut asperiores laudantium vero ratione sequi eligendi dolores impedit
-        perspiciatis? Eum? Deleniti sint fugiat perferendis sapiente labore consequuntur atque ad corporis. Quisquam recusandae consequuntur ipsum corporis est culpa accusamus, maiores aliquid praesentium inventore eos nemo aut iure dolores laborum porro
-        magnam. Fuga ea voluptatem molestias sit, est tempora recusandae voluptate sapiente! Ipsum soluta hic cumque. Accusamus, odio repudiandae nisi doloremque numquam sapiente commodi aspernatur. Culpa consectetur aspernatur atque accusamus, magnam
-        numquam. Dolore, mollitia natus? Natus accusamus repellendus consequatur ratione, pariatur sunt quaerat sint voluptatem molestias fugiat, sed quas adipisci laudantium eos porro voluptatum suscipit. Eius vero provident distinctio possimus culpa
-        illum. Nobis at ea aliquid beatae ex facilis cum ab? Blanditiis molestias ullam, facere ab distinctio itaque in? Quo assumenda ullam error? Tempora repellat molestiae voluptas porro nam doloribus cum et! Sit excepturi animi cum autem suscipit
-        omnis maiores aliquam temporibus est tempora facere cumque magnam, obcaecati nobis dolorum dolore sapiente at harum corporis qui minus architecto. Eos distinctio repellendus maxime. Omnis in veniam est quaerat rerum voluptatem iste cum facilis
-        aperiam. Nulla amet saepe necessitatibus soluta excepturi repellendus voluptatum molestias doloribus iste exercitationem, quaerat itaque maiores tempore ipsam doloremque sint! Molestias ex cumque delectus atque, nesciunt distinctio incidunt aliquam
-        quod est eligendi ratione quae aspernatur excepturi accusamus quam vel nulla! Commodi ullam et reprehenderit? Eligendi possimus tempore voluptatum distinctio sapiente. Quos possimus aliquam neque, deserunt odit libero, soluta, quia harum atque
-        inventore praesentium! Dolores, expedita! Aspernatur error expedita quod. Sed minus sunt aperiam temporibus iure doloremque tempora beatae porro eaque! Eos reiciendis voluptate sint natus explicabo et recusandae perspiciatis ex beatae harum id,
-        incidunt quibusdam quae in odio expedita deleniti! Quibusdam aliquid perferendis dolor! Consequuntur molestias consectetur ex consequatur! Debitis. Iure incidunt qui dicta, iusto officia, similique eum laboriosam at autem atque sequi tempore ex
-        consequuntur odit quas porro aut illo odio nulla expedita fuga. Molestiae consectetur possimus autem excepturi! Molestias quibusdam eveniet fugit ullam suscipit consectetur vitae doloremque eum molestiae! Quis alias, itaque voluptas deserunt sequi
-        ex minus tenetur nihil dolor, hic iste, est ab voluptatem voluptates mollitia non! Incidunt, sapiente explicabo quaerat est reiciendis corrupti, eaque repellendus rerum nam velit tempora excepturi impedit quia laboriosam recusandae! Doloribus
-        tempora vel quas dolores veniam soluta ea, enim optio hic quisquam? Iure voluptate ad saepe obcaecati nobis quasi laboriosam labore libero quibusdam voluptatum minima possimus officiis, cumque numquam ex, id quos nesciunt a? A, molestias! Dolor
-        dolore odio necessitatibus eum at. Cupiditate accusamus, inventore veniam repudiandae in quaerat facere quo molestias pariatur debitis quidem officiis illo eligendi doloremque labore quae voluptatem assumenda doloribus porro? Vero delectus sequi
-        inventore incidunt rerum alias? Inventore aspernatur, odit quo, a eos distinctio soluta velit nostrum tempora praesentium voluptates, in consequuntur. Quo ratione consequatur laboriosam sit voluptatem quas ab, eveniet at, facere quidem, earum
-        ut non. Assumenda fuga ipsam aspernatur repudiandae, dolorum eveniet temporibus aliquam at molestiae quaerat quidem in veritatis veniam ut exercitationem voluptates saepe doloremque soluta reprehenderit ab maiores possimus deleniti eos itaque?
-        Molestiae! Ab quidem deleniti accusantium dignissimos, deserunt cupiditate quibusdam saepe impedit repellat sed nemo nesciunt voluptate a velit error omnis! Harum quia a delectus! Saepe nemo debitis praesentium beatae consequatur totam. Magnam
-        optio sequi laboriosam totam saepe tempora, doloribus dolorum. Ipsa, quia. Nulla, ad ducimus. Adipisci neque sint harum aperiam cumque qui id nostrum, cum nemo facilis ipsam ratione mollitia autem! Nam dolore perspiciatis, ab deserunt quibusdam
-        voluptate magnam aperiam sit eveniet repellat. Placeat, expedita corrupti ut aspernatur totam magni modi nesciunt adipisci ipsam similique, accusantium ea soluta, sapiente quidem voluptate. Voluptatibus voluptas voluptates enim rerum magnam doloribus
-        corporis, officiis ad laudantium earum quas consectetur et, repellendus at a animi, aut deserunt! Pariatur expedita saepe soluta tempora corporis ut! Molestiae, corrupti! Doloribus nisi, quos aspernatur consequatur facilis quidem a dolores culpa
-        laudantium? Vitae cupiditate maiores delectus magnam nemo quam pariatur atque quaerat, beatae harum, animi adipisci in. Optio, non temporibus? Similique? Recusandae animi eos ex nesciunt, officia dicta, voluptatum, vero illum molestiae mollitia
-        vel! Quod, quas corrupti nisi ipsam amet blanditiis libero odio aut dolorum nihil dicta? Corporis impedit iste maiores. Et velit cum est ut distinctio rerum mollitia a omnis rem quae expedita modi magnam minus quisquam, hic fuga! Nulla doloribus
-        dolor fugit qui numquam dolores vel praesentium at accusamus! Autem quia commodi accusamus reiciendis corporis nihil iusto hic saepe doloribus ullam eius, harum obcaecati ipsa perspiciatis iste debitis at similique necessitatibus quisquam perferendis
-        fuga corrupti facere tempore? Eveniet, doloribus? At provident dolore fuga repellendus ullam, velit perferendis blanditiis, unde facere, tempore facilis necessitatibus aperiam et officia hic ratione odit magnam! Asperiores non distinctio quia
-        consectetur eius culpa nemo veritatis. Nisi quasi quibusdam sed optio, sint temporibus nulla corporis, at doloremque earum magni quidem totam magnam dicta dolores, possimus ad minus quos sequi dolorum? Neque ipsa aut ut et quibusdam? Maxime, beatae
-        obcaecati illum, est deleniti corrupti sunt consectetur, temporibus magni nam tenetur nulla voluptatem! Odio cupiditate tenetur quos libero sed, quisquam ullam atque totam veritatis dolorem voluptatibus nulla officia? Quod explicabo debitis quidem
-        amet architecto commodi at eos inventore iste ad consequatur eius sequi recusandae magnam temporibus illo suscipit, delectus eligendi assumenda facere mollitia. Ad alias delectus cupiditate assumenda. Distinctio, in maxime harum optio dolor nulla
-        libero eum unde praesentium atque autem eveniet ducimus quae iure repudiandae laboriosam totam non et doloremque? Expedita tempore quae sequi veniam iure cupiditate. Fuga eum quae quis doloremque quidem cum rem tempora perferendis, consequatur
-        laudantium fugit possimus, in unde odit. Reprehenderit, nulla id quos voluptatum sapiente maiores veritatis, voluptates corporis ipsum dolor voluptatibus? Facere dolores rem quam minus doloribus molestias architecto ipsam earum corporis optio
-        qui, numquam est cupiditate vel, voluptatibus molestiae. Ducimus temporibus eveniet id, et minus illo odit incidunt obcaecati recusandae. Pariatur aliquid nesciunt facilis eos provident distinctio debitis numquam laborum assumenda maiores eius,
-        libero nulla dolores voluptatibus recusandae commodi esse deleniti blanditiis. Vero voluptate porro dicta, praesentium commodi aliquid reiciendis? Dolor itaque veritatis officia libero beatae laborum nobis eveniet perferendis, corrupti aperiam
-        totam aspernatur mollitia molestias culpa sunt hic? Tenetur sapiente provident natus vitae amet ipsam unde officia voluptas consequatur. Atque, reiciendis possimus. Reiciendis, praesentium voluptatem aut fugit a ipsum optio aliquam impedit ut
-        veniam illo natus, architecto vitae. Deserunt tempora repudiandae quibusdam temporibus explicabo beatae error nihil officia dignissimos? Commodi veniam atque omnis blanditiis similique libero, quod fugit suscipit non totam quasi repellat eligendi
-        modi, eum harum magni unde molestiae expedita pariatur ab obcaecati. Consequatur doloremque quod aperiam asperiores!</p>
     <!-- INTRO -->
-    <!-- <section class="intro section-outer">
+    <section class="intro section-outer">
         <div class="section-inner">
             <div class="intro__content">
                 <div class="intro-info">
@@ -430,7 +383,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- / INTRO -->
 
     <!-- FOOTER -->
