--- a/app/page.html
+++ b/app/page.html
@@ -16,7 +16,7 @@
 
     <!-- POPUPS -->
     <!-- POPUP-TRIAL -->
-    <!-- <div class="popup" id="popup-trial">
+    <div class="popup" id="popup-trial">
         <div class="section-inner popup--trial">
             <div class="popup-wrapper">
                 <div class="popup-inner">
@@ -128,11 +128,11 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- / POPUP-TRIAL -->
 
     <!-- POPUP-PAYMENT -->
-    <!-- <div class="popup" id="popup-payment">
+    <div class="popup" id="popup-payment">
         <div class="section-inner popup--payment">
             <div class="popup-wrapper">
                 <div class="popup-inner">
@@ -162,11 +162,11 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- / POPUP-PAYMENT -->
 
     <!-- POPUP-CALL -->
-    <!-- <div class="popup" id="popup-call">
+    <div class="popup" id="popup-call">
         <div class="section-inner popup--call">
             <div class="popup-wrapper">
                 <div class="popup-inner">
@@ -188,12 +188,12 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- / POPUP-CALL -->
     <!-- / POPUPS -->
 
     <!-- HEADER -->
-    <header class="header section-outer section-header ">
+    <header class="header section-outer section-header">
         <!-- DESKTOP HEADER -->
         <div id="main-navigation">
             <div class="section-inner">
