added adaptive assignment, languages

--- a/app/index.html
+++ b/app/index.html
@@ -411,7 +411,7 @@
         <div class="section-inner">
             <div class="languages-wrapper">
                 <div class="languages-top">
-                    <h3 class="languages-title title">У нас вы можете выучить:</h3>
+                    <h3 class="languages-title title"><span>У нас вы можете выучить:</span></h3>
                 </div>
                 <div class="languages-items">
                     <div class="languages-item">
@@ -448,7 +448,7 @@
         <div class="section-inner">
             <div class="why-speaky__wrapper">
                 <div class="why-speaky__info">
-                    <div class="why-speaky__info-title title">Почему Speaky School?</div>
+                    <div class="why-speaky__info-title title"><span>Почему Speaky School?</span></div>
                     <div class="why-speaky__info-text text">Ежегодно наши ученики успешно сдают международные экзамены, поступают в престижные российские и европейские учебные заведения. <br> В нашей школе обучаются дети и родители, школьники и взрослые, бабушки и дедушки!
                     </div>
                 </div>
@@ -624,7 +624,7 @@
                     </div>
                 </div>
                 <div class="distribution__content-info">
-                    <div class="distribution__content-info-title title">Для детей</div>
+                    <div class="distribution__content-info-title title"><span>Для детей</span></div>
                     <div class="distribution__content-info-items">
                         <div class="distribution__content-info-item">
                             <div class="distribution__content-info-item-title">Онлайн</div>
@@ -666,7 +666,7 @@
                     </div>
                 </div>
                 <div class="distribution__content-info">
-                    <div class="distribution__content-info-title title">Для взрослых</div>
+                    <div class="distribution__content-info-title title"><span>Для взрослых</span></div>
                     <div class="distribution__content-info-items">
                         <div class="distribution__content-info-item">
                             <div class="distribution__content-info-item-title">Онлайн</div>
@@ -700,7 +700,7 @@
     <section class="smart section-outer">
         <div class="section-inner">
             <div class="smart__top">
-                <div class="smart__title title">Мы используем SMART-подход в обучении</div>
+                <div class="smart__title title"><span>Мы используем SMART-подход в обучении</span></div>
                 <div class="smart__top-info">
                     Чтобы обучение было максимально эффективным, мы составляем индивидуальную карту обучения: ваша исходная точка, конечный результат, срок достижения этого результата. И будем вместе идти к этим целям
                 </div>
@@ -906,7 +906,7 @@
         <div class="section-inner history-inner">
             <div class="history__wrapper">
                 <div class="history__top">
-                    <div class="history__title title">История развития Speaky school</div>
+                    <div class="history__title title"><span>История развития Speaky school</span></div>
                 </div>
                 <div class="history__slider-inner">
                     <div class="history__slider-container swiper-container">
