--- a/app/page.html
+++ b/app/page.html
@@ -370,6 +370,7 @@
         <!-- / MOBILE HEADER -->
     </header>
     <!-- / HEADER -->
+
     <!-- INTRO -->
     <section class="intro section-outer">
         <div class="section-inner">
@@ -385,6 +386,65 @@
         </div>
     </section>
     <!-- / INTRO -->
+
+    <!-- ASSIGNEMENT -->
+    <section class="assignment section-outer">
+        <div class="section-inner">
+            <div class="assignment-items">
+                <div class="assignment-item">
+                    <div class="assignment-item__images">
+                        <img src="images/uploads/uploads-1.png" alt="">
+                        <h2 class="assignment-item__text"><span>обучение взрослых</span></h2>
+                    </div>
+                </div>
+                <div class="assignment-item">
+                    <div class="assignment-item__images">
+                        <img src="images/uploads/uploads-2.png" alt="">
+                        <h3 class="assignment-item__text"><span>обучение детей</span></h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / ASSIGNMENT -->
+
+    <!-- LANGUAGES -->
+    <section class="languages section-outer">
+        <div class="section-inner">
+            <div class="languages-wrapper">
+                <div class="languages-top">
+                    <div class="languages-title title"><span>У нас вы можете выучить:</span></div>
+                </div>
+                <div class="languages-items">
+                    <div class="languages-item">
+                        <div class="languages-item-images">
+                            <img src="images/icons/languages-1.png" alt="">
+                        </div>
+                        <div class="languages-item-text">Английский</div>
+                    </div>
+                    <div class="languages-item">
+                        <div class="languages-item-images">
+                            <img src="images/icons/languages-2.png" alt="">
+                        </div>
+                        <div class="languages-item-text">Немецкий</div>
+                    </div>
+                    <div class="languages-item">
+                        <div class="languages-item-images">
+                            <img src="images/icons/languages-3.png" alt="">
+                        </div>
+                        <div class="languages-item-text">Испанский</div>
+                    </div>
+                    <div class="languages-item">
+                        <div class="languages-item-images">
+                            <img src="images/icons/languages-4.png" alt="">
+                        </div>
+                        <div class="languages-item-text">Французский</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / LANGUAGES -->
 
     <!-- FOOTER -->
     <footer class="footer">
