--- a/app/children-online.html
+++ b/app/children-online.html
@@ -21,15 +21,15 @@
             <div class="popup-wrapper">
                 <div class="popup-inner">
                     <button class="popup-btn js-modal-close">Закрыть</button>
-                    <div class="popup-content">
-                        <div class="popup-title">Записаться на пробное занятие</div>
+                    <div class="tab-content">
+                        <div class="popup-title tab-title">Записаться на пробное занятие</div>
                         <div class="popup-tab__wrapper tab-wrapper">
-                            <div class="popup-tabs">
-                                <span class="popup-tab popup-tab--active" data-tab="#tab_1">Взрослые</span>
-                                <span class="popup-tab" data-tab="#tab_2">Дети и подростки</span>
+                            <div class="tab-items">
+                                <span class="tab-list tab--active" data-tab="#tab_1">Взрослые</span>
+                                <span class="tab-list" data-tab="#tab_2">Дети и подростки</span>
                             </div>
                             <div class="popup-tab__content">
-                                <div class="popup-tab__item popup-tab__content--active" id="tab_1">
+                                <div class="tab-item tab-content--active" id="tab_1">
                                     <div class="popup__item-info">
                                         <form class="popup__item-form">
                                             <div class="popup__select">
@@ -75,7 +75,7 @@
                                         </form>
                                     </div>
                                 </div>
-                                <div class="popup-tab__item" id="tab_2">
+                                <div class="tab-item" id="tab_2">
                                     <form class="popup__item-form">
                                         <div class="popup__select">
                                             <div class="select-wrapper">
@@ -137,7 +137,7 @@
             <div class="popup-wrapper">
                 <div class="popup-inner">
                     <button class="popup-btn js-modal-close">Закрыть</button>
-                    <div class="popup-content">
+                    <div class="tab-content">
                         <div class="popup-title">Оплата услуг</div>
                         <form class="popup__item-form">
                             <div class="popup__item-personal-date">
@@ -171,7 +171,7 @@
             <div class="popup-wrapper">
                 <div class="popup-inner">
                     <button class="popup-btn js-modal-close">Закрыть</button>
-                    <div class="popup-content">
+                    <div class="tab-content">
                         <div class="popup-title">Заказать звонок</div>
                         <form class="popup__item-form">
                             <div class="popup__item-personal-date">
@@ -562,6 +562,28 @@
         </div>
     </div>
     <!-- / FOREIGN-LANGUAGES -->
+
+    <!-- TRAINING PACKAGES -->
+    <div class="packages section-outer">
+        <div class="section-inner">
+
+            <div class="packages-wrapper">
+
+                <div class="packages-top">
+                    <div class="packages-title title"><span>пакеты обучения</span></div>
+                </div>
+
+                <div class="packages-tab">
+
+                    <div class="packages-tab__wrapper"></div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+    <!-- / TRAINING PACKAGES -->
 
     <!-- FOOTER -->
     <footer class="footer">
