added section result

--- a/app/children-offline.html
+++ b/app/children-offline.html
@@ -462,6 +462,91 @@
         </div>
     </section>
     <!-- / BY COMING TO US, YOUR CHILD -->
+
+    <!-- TRUST -->
+    <section class="trust section-outer">
+        <div class="section-inner">
+            <div class="trust-wrapper">
+                <div class="trust-content">
+                    <div class="trust-info">
+                        <div class="trust-info__title title"><span>Выучить язык совсем несложно</span></div>
+                        <div class="trust-info__button">
+                            <a class="trust-info__btn btn js-modal-open" href="#popup-trial">Пробное занятие</a>
+                        </div>
+                    </div>
+                    <div class="trust-photo">
+                        <div class="trust-photo__inner" style="background-image: url(images/default-images/img-bg-5.svg);">
+                            <img class="trust-photo__inner-img" src="images/uploads/uploads-9.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / TRUST -->
+
+    <!-- RESULT -->
+    <section class="result section-outer">
+        <div class="section-inner">
+            <div class="result-top">
+                <div class="result-title title"><span>Результата достигаем за счет:</span></div>
+            </div>
+            <div class="result-container swiper-container">
+                <div class="result-wrapper swiper-wrapper">
+                    <div class="result-slide swiper-slide">
+                        <div class="result-slide__img">
+                            <img src="images/icons/result-icon-1.svg" alt="">
+                        </div>
+                        <div class="result-slide__info">
+                            языковой цели для каждого студента и срока достижения цели
+                        </div>
+                    </div>
+                    <div class="result-slide swiper-slide">
+                        <div class="result-slide__img">
+                            <img src="images/icons/result-icon-2.svg" alt="">
+                        </div>
+                        <div class="result-slide__info">
+                            максимального погружения в языковую среду с носителями языка
+                        </div>
+                    </div>
+                    <div class="result-slide swiper-slide">
+                        <div class="result-slide__img">
+                            <img src="images/icons/result-icon-3.svg" alt="">
+                        </div>
+                        <div class="result-slide__info">
+                            грамматики, письма, чтения, аудирования на каждом уроке
+                        </div>
+                    </div>
+                    <div class="result-slide swiper-slide">
+                        <div class="result-slide__img">
+                            <img src="images/icons/result-icon-4.svg" alt="">
+                        </div>
+                        <div class="result-slide__info">
+                            заданийна основе интересов и увлечений детей
+                        </div>
+                    </div>
+                    <div class="result-slide swiper-slide">
+                        <div class="result-slide__img">
+                            <img src="images/icons/result-icon-5.svg" alt="">
+                        </div>
+                        <div class="result-slide__info">
+                            обратной связи с родителями каждые 8-10 занятий с промежуточными тестами
+                        </div>
+                    </div>
+                    <div class="result-slide swiper-slide">
+                        <div class="result-slide__img">
+                            <img src="images/icons/result-icon-6.svg" alt="">
+                        </div>
+                        <div class="result-slide__info">
+                            чёткого тайминга занятий и контроля результатов
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- / RESULT -->
+
     <!-- FOOTER -->
     <footer class="footer">
         <div class="section-inner">
